--- a/Chat_Application/package.json
+++ b/Chat_Application/package.json
@@ -17,8 +17,12 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "husky": "^8.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
